# hayward-ha

./: LICENSE  README.md  aquarite_dashboard.yaml  hacs.json
.github/workflows/: tests.yml
aioaquarite/: README.md  pyproject.toml
aioaquarite/src/aioaquarite/: __init__.py  auth.py  client.py  const.py  exceptions.py
custom_components/aquarite/: __init__.py  application_credentials.py  aquarite.py  aquaritedataservice.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  entity.py  icons.json  light.py  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py
custom_components/aquarite/translations/: da.json  en.json  nl.json
docs/: aquarite.markdown
tests/: __init__.py  test_config_flow.py  test_coordinator.py  test_sensor.py
