[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioaquarite"
version = "0.1.0"
description = "Async Python client for the Hayward Aquarite pool API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "fdebrus"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
    "google-auth>=2.29.0",
    "google-cloud-firestore>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/fdebrus/hayward-ha"
Repository = "https://github.com/fdebrus/hayward-ha"

[tool.setuptools.packages.find]
where = ["src"]
